--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "npx @11ty/eleventy --serve",
-  "build": "npx @11ty/eleventy",
-  "deploy": "npm run build && gh-pages -d _site -r https://github.com/aashishkaf/asymptote.git"
+    "start": "npx @11ty/eleventy --serve",
+    "build": "npx @11ty/eleventy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@11ty/eleventy": "^3.1.1",
-    "gh-pages": "^6.3.0"
+    "@11ty/eleventy": "^3.1.1"
   }
 }
